# ComfyUI-Desert-Pixel-Nodes

./: .gitignore  DP_node_pack  Desert_Pixel_Flux_Lab.json  Desert_Pixel_Sdxl_Lab.json  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
New_Docs/: folders creator.bat  index.md
Workflows/: DP_AnimateDiff_10_Images_Animation.json  DP_AnimateDiff_Vid2Vid.json  DP_Character_Sheet.json  DP_Electrified.json  DP_FLUX_LAB.json  DP_SDXL_LAB.json  Desert_Pixel_All_my_nodes.json  Image_to_15_stylesGrid.json  Image_to_8_stylesGrid.json  Image_to_9_stylesGrid.json
js/: dp_art_style_generator.js  dp_image_and_string_pairs_switch.js  dp_image_color_effect.js  dp_line_cycler.js  dp_stepper_handler.js  dp_text_preview.js  dp_theme_handler.js  dp_themes.js
nodes/: ComfyUI-Desert-Pixel-Nodes.code-workspace  __init__.py  dp_3parts_prompt_line_cycler.py  dp_5_find_and_replace.py  dp_5_image_and_mask_switch.py  dp_Image_Grid_To_Image.py  dp_Image_Slice_To_Grid.py  dp_add_background_to_png.py  dp_add_weight_to_string_sdxl.py  dp_advanced_sampler.py  dp_advanced_weight_string_sdxl.py  dp_animation_calculator_10inputs.py  dp_animation_calculator_5inputs.py  dp_animation_int_selectors.py  dp_art_style_generator.py  dp_big_letter.py  dp_big_letters.py  dp_broken_token.py  dp_checkpoint_loader.py  dp_clean_prompt.py  dp_clean_prompt_travel.py  dp_combo_controller.py  dp_condition_mixer.py  dp_controlnet.py  dp_crazy_prompt_mixer.py  dp_crazy_random_prompt_generator.py  dp_create_simple_json.py  dp_custom_aspect_ratio.py  dp_draggable_floats.py  dp_extract_mask.py  (+81 more)
(+152 files in other folders)
